# HenSurf

./: CONTRIBUTING.md  LICENSE  README.md  README_backup.md  bandit_report.txt  build_optimizations_report.md  chromium_test_suites_investigation.md  cross_platform_testing_strategy.md  flake8_report.txt  performance_features_analysis.md  pylint_report.json  shellcheck_report.txt  submission_preparation.md  windows_test_script_design.md
.github/workflows/: clang-tidy.yml  codeql.yml  dependency-review.yml  gitleaks.yml  powershell.yml  pylint.yml  shellcheck.yml
chromium/src/chrome/app/theme/hensurf/: BRANDING
chromium/src/components/crash/core/common/: crash_key.cc
chromium/src/google_apis/: google_api_keys.cc
config/: features.json  hensurf.gn
depot_tools_mock/: gclient
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INDEX.md  PRIVACY.md
patches/: another-mock.patch  integrate-logo.patch  remove-ai-features.patch  remove-bloatware.patch
scripts/: apply-patches.sh  apply_feature_patches.sh  build.sh  change-logo.sh  fetch-chromium.sh  install-deps.sh  interactive_build.sh  run_all_tests.py  setup-logo.sh  test-hensurf.ps1  test-hensurf.sh  utils.sh
src/chromium/chrome/: VERSION
src/chromium/chrome/app/: chrome_exe.ver
src/chromium/components/search_engines/: hensurf_engines.cc
src/chromium/components/version_info/: hensurf_version_info.cc
src/hensurf/branding/distributable_assets/chromium/chrome/app/: chrome_exe.ver
src/hensurf/branding/distributable_assets/chromium/chrome/app/theme/chromium/: BRANDING
src/hensurf/branding/icons/: icon_manifest.json
src/hensurf/config/: hensurf.gn
src/hensurf/patches/: feature-custom-user-agent-file.patch  feature-default-search-engine.patch  feature-disable-crash-reporting.patch  feature-disable-google-apis.patch  feature-update-version-info.patch  integrate-logo.patch  remove-ai-features.patch  remove-bloatware.patch
tmp_mocks/: PlistBuddy  autoninja  brew  ccache  df  gn  iconutil  patch  sw_vers  sysctl  uname  xcode-select
