# HenSurf Browser Build Configuration
# This file meow the meow meow for HenSurf to remove AI slop features and sloppy slop

# Basic build settings
is_debug = false
is_component_build = false
symbol_level = 1
is_official_build = true
is_canary_build = false
# Disable AI and ML features
enable_supervised_users = false
enable_one_click_signin = false
enable_google_now_integration = false
enable_hangout_services_extension = false
enable_google_now = false
enable_hotwording = false

# Disable bloatware and unnecessary features
enable_nacl = false
enable_widevine = false
enable_print_preview = false
enable_service_discovery = false
enable_wifi_bootstrapping = false
enable_remoting = false
enable_app_list = false
enable_background_mode = false
enable_captive_portal_detection = false
enable_google_now = false
enable_mdns = false
enable_plugin_installation = false
enable_plugins = false
enable_task_manager = false
enable_themes = false

# Privacy and security settings
enable_full_safe_browsing = false
safe_browsing_mode = 0
enable_reporting = false
enable_dice_support = false
enable_signin_frame = false

# Disable Google services integration
enable_google_apis = false
google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
use_official_google_api_keys = false

# Disable spellcheck (uses Google services)
enable_spellcheck = false

# Media settings
ffmpeg_branding = "Chrome"
proprietary_codecs = true
enable_webrtc = true

# Audio settings for macOS
use_pulseaudio = false

# Optimization settings
remove_webcore_debug_symbols = true
enable_iterator_debugging = false
is_clang = true
use_thin_lto = true

# Disable extensions that depend on Google services
enable_extensions = true
enable_extension_apis = true
# Note: We keep extensions enabled but will remove Google-dependent ones via patches

# Disable sync and cloud features
enable_configuration_policy = false
enable_cloud_policy = false

# Branding
chrome_pgo_phase = 0
is_chrome_branded = false

# Disable metrics and crash reporting
enable_crash_service = false
enable_profiling = false

# Network settings
enable_websockets = true
enable_webrtc = true

# Disable promotional features
enable_app_list = false
enable_google_now = false

# Build optimizations
use_goma = false
use_jumbo_build = true
jumbo_file_merge_limit = 50

# Target architecture (adjust as needed)
target_cpu = "x64"

# macOS specific settings
mac_deployment_target = "10.15"
use_system_xcode = true